--- a/Exploration/Quest01/colab_test.ipynb
+++ b/Exploration/Quest01/colab_test.ipynb
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b3ea4097-85e5-49e2-b4bc-aef892529d1f",
    "metadata": {},
    "outputs": [
@@ -1197,10 +1197,60 @@
       "From https://github.com/nagujean/AIFFEL_quest_rs\n",
       " * branch            main       -> FETCH_HEAD\n",
       "Updating 36ba7b3..0cee8da\n",
-      "error: Your local changes to the following files would be overwritten by merge:\n",
-      "\tExploration/Quest01/colab_test.ipynb\n",
-      "Please commit your changes or stash them before you merge.\n",
-      "Aborting\n"
+      "Fast-forward\n",
+      " Exploration/Quest01/Pokemon.csv                    |  801 \u001b[32m++++++++++++++++\u001b[m\n",
+      " Exploration/Quest01/datasets/Cat_Mario.jpg         |  Bin \u001b[31m0\u001b[m -> \u001b[32m22015\u001b[m bytes\n",
+      " Exploration/Quest01/datasets/Cat_Mario_1.jpg       |  Bin \u001b[31m0\u001b[m -> \u001b[32m46009\u001b[m bytes\n",
+      " Exploration/Quest01/datasets/airplane.jpg          |  Bin \u001b[31m0\u001b[m -> \u001b[32m20453\u001b[m bytes\n",
+      " Exploration/Quest01/datasets/binary.csv            | 1001 \u001b[32m++++++++++++++++++++\u001b[m\n",
+      " Exploration/Quest01/datasets/bus.jpg               |  Bin \u001b[31m0\u001b[m -> \u001b[32m202589\u001b[m bytes\n",
+      " Exploration/Quest01/datasets/imagenet_classes.txt  | 1000 \u001b[32m+++++++++++++++++++\u001b[m\n",
+      " Exploration/Quest01/models/250719_model.pt         |  Bin \u001b[31m0\u001b[m -> \u001b[32m2742\u001b[m bytes\n",
+      " Exploration/Quest01/models/250719_model_state_dict |  Bin \u001b[31m0\u001b[m -> \u001b[32m1784\u001b[m bytes\n",
+      " Exploration/Quest01/models/checkpoint-1.pt         |  Bin \u001b[31m0\u001b[m -> \u001b[32m2295\u001b[m bytes\n",
+      " Exploration/Quest01/models/checkpoint-10.pt        |  Bin \u001b[31m0\u001b[m -> \u001b[32m2302\u001b[m bytes\n",
+      " Exploration/Quest01/models/checkpoint-2.pt         |  Bin \u001b[31m0\u001b[m -> \u001b[32m2295\u001b[m bytes\n",
+      " Exploration/Quest01/models/checkpoint-3.pt         |  Bin \u001b[31m0\u001b[m -> \u001b[32m2295\u001b[m bytes\n",
+      " Exploration/Quest01/models/checkpoint-4.pt         |  Bin \u001b[31m0\u001b[m -> \u001b[32m2295\u001b[m bytes\n",
+      " Exploration/Quest01/models/checkpoint-5.pt         |  Bin \u001b[31m0\u001b[m -> \u001b[32m2295\u001b[m bytes\n",
+      " Exploration/Quest01/models/checkpoint-6.pt         |  Bin \u001b[31m0\u001b[m -> \u001b[32m2295\u001b[m bytes\n",
+      " Exploration/Quest01/models/checkpoint-7.pt         |  Bin \u001b[31m0\u001b[m -> \u001b[32m2295\u001b[m bytes\n",
+      " Exploration/Quest01/models/checkpoint-8.pt         |  Bin \u001b[31m0\u001b[m -> \u001b[32m2295\u001b[m bytes\n",
+      " Exploration/Quest01/models/checkpoint-9.pt         |  Bin \u001b[31m0\u001b[m -> \u001b[32m2295\u001b[m bytes\n",
+      " Exploration/Quest01/pytoch_2.ipynb                 |    1 \u001b[32m+\u001b[m\n",
+      " Exploration/Quest01/pytoch_3.ipynb                 |    1 \u001b[32m+\u001b[m\n",
+      " Exploration/Quest01/pytoch_4.ipynb                 |    1 \u001b[32m+\u001b[m\n",
+      " Exploration/Quest01/pytoch_5_DatdAug.ipynb         |    1 \u001b[32m+\u001b[m\n",
+      " .../Quest01/pytoch_6_ImgClassification.ipynb       |    1 \u001b[32m+\u001b[m\n",
+      " Exploration/Quest01/pytoch_7.ipynb                 |    1 \u001b[32m+\u001b[m\n",
+      " .../Quest01/{colab_test.ipynb => pytorch_1.ipynb}  |    0\n",
+      " 26 files changed, 2808 insertions(+)\n",
+      " create mode 100644 Exploration/Quest01/Pokemon.csv\n",
+      " create mode 100644 Exploration/Quest01/datasets/Cat_Mario.jpg\n",
+      " create mode 100644 Exploration/Quest01/datasets/Cat_Mario_1.jpg\n",
+      " create mode 100644 Exploration/Quest01/datasets/airplane.jpg\n",
+      " create mode 100644 Exploration/Quest01/datasets/binary.csv\n",
+      " create mode 100644 Exploration/Quest01/datasets/bus.jpg\n",
+      " create mode 100644 Exploration/Quest01/datasets/imagenet_classes.txt\n",
+      " create mode 100644 Exploration/Quest01/models/250719_model.pt\n",
+      " create mode 100644 Exploration/Quest01/models/250719_model_state_dict\n",
+      " create mode 100644 Exploration/Quest01/models/checkpoint-1.pt\n",
+      " create mode 100644 Exploration/Quest01/models/checkpoint-10.pt\n",
+      " create mode 100644 Exploration/Quest01/models/checkpoint-2.pt\n",
+      " create mode 100644 Exploration/Quest01/models/checkpoint-3.pt\n",
+      " create mode 100644 Exploration/Quest01/models/checkpoint-4.pt\n",
+      " create mode 100644 Exploration/Quest01/models/checkpoint-5.pt\n",
+      " create mode 100644 Exploration/Quest01/models/checkpoint-6.pt\n",
+      " create mode 100644 Exploration/Quest01/models/checkpoint-7.pt\n",
+      " create mode 100644 Exploration/Quest01/models/checkpoint-8.pt\n",
+      " create mode 100644 Exploration/Quest01/models/checkpoint-9.pt\n",
+      " create mode 100644 Exploration/Quest01/pytoch_2.ipynb\n",
+      " create mode 100644 Exploration/Quest01/pytoch_3.ipynb\n",
+      " create mode 100644 Exploration/Quest01/pytoch_4.ipynb\n",
+      " create mode 100644 Exploration/Quest01/pytoch_5_DatdAug.ipynb\n",
+      " create mode 100644 Exploration/Quest01/pytoch_6_ImgClassification.ipynb\n",
+      " create mode 100644 Exploration/Quest01/pytoch_7.ipynb\n",
+      " rename Exploration/Quest01/{colab_test.ipynb => pytorch_1.ipynb} (100%)\n"
      ]
     }
    ],
@@ -1210,13 +1260,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6879da38-33e6-449f-b8f7-a84a93161b67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved working directory and index state On main: test\n"
+     ]
+    }
+   ],
    "source": [
-    "!git stas"
+    "!git stash save \"test\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "910711bc-3e83-4fcc-a3d5-eda96b4385fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stash@{0}: On main: test\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git stash list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "73cafeb4-6269-4d1a-b9c6-2628610e0e4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\t\u001b[31mmodified:   pytorch_1.ipynb\u001b[m\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\t\u001b[31mcolab_test.ipynb\u001b[m\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n",
+      "Dropped refs/stash@{0} (92125b8dc098d11d64b229945f1a520d7078854d)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git stash pop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "813ff52e-2e39-4bc8-b1a7-b48e0bbac963",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
