--- a/Exploration/Quest01/colab_test.ipynb
+++ b/Exploration/Quest01/colab_test.ipynb
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "97cf73a1-6460-4386-912e-f739b693262f",
    "metadata": {},
    "outputs": [],
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "f7e8deda-29ca-4715-aeed-c38bb4f88ede",
    "metadata": {},
    "outputs": [
@@ -1108,15 +1108,18 @@
      "output_type": "stream",
      "text": [
       "On branch main\n",
-      "Your branch is behind 'origin/main' by 8 commits, and can be fast-forwarded.\n",
-      "  (use \"git pull\" to update your local branch)\n",
+      "Your branch is ahead of 'origin/main' by 1 commit.\n",
+      "  (use \"git push\" to publish your local commits)\n",
       "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\t\u001b[31mmodified:   colab_test.ipynb\u001b[m\n",
+      "Changes to be committed:\n",
+      "  (use \"git restore --staged <file>...\" to unstage)\n",
+      "\t\u001b[32mmodified:   pytoch_7.ipynb\u001b[m\n",
       "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\t\u001b[31m../Quest03/.ipynb_checkpoints/\u001b[m\n",
+      "\t\u001b[31m../Quest03/Ex03.ipynb\u001b[m\n",
+      "\n"
      ]
     }
    ],
@@ -1126,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "00734b3e-b506-4481-977c-a4d4646d6601",
    "metadata": {},
    "outputs": [],
@@ -1137,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "d25d0f8d-1ec1-460a-851d-ed297c9b2b62",
    "metadata": {},
    "outputs": [
@@ -1145,22 +1148,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 36ba7b3] 파이토치 테스트 모델 파일등 업뎃\n",
-      " 5 files changed, 1319 insertions(+), 1 deletion(-)\n",
-      " create mode 100644 Exploration/Quest01/.ipynb_checkpoints/colab_test-checkpoint.ipynb\n",
-      " create mode 100644 Exploration/Quest01/models/model.pt\n",
-      " create mode 100644 Exploration/Quest01/models/model_state_dict.pt\n",
-      " create mode 100644 Exploration/Quest01/non_linear.csv\n"
+      "[main 265fcc9] commit\n",
+      " 1 file changed, 701 insertions(+), 1 deletion(-)\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \"파이토치 테스트 모델 파일등 업뎃\""
+    "!git commit -m \"commit\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "59954e38-437e-4f5d-a4cb-080cecb7335d",
    "metadata": {},
    "outputs": [
@@ -1168,20 +1167,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enumerating objects: 15, done.\n",
-      "Counting objects: 100% (15/15), done.\n",
-      "Delta compression using up to 2 threads\n",
-      "Compressing objects: 100% (10/10), done.\n",
-      "Writing objects: 100% (10/10), 9.66 KiB | 2.42 MiB/s, done.\n",
-      "Total 10 (delta 2), reused 0 (delta 0), pack-reused 0\n",
-      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
-      "To https://github.com/nagujean/AIFFEL_quest_rs.git\n",
-      "   c903d55..36ba7b3  main -> main\n"
+      "Username for 'https://github.com': "
      ]
     }
    ],
    "source": [
     "!git push origin main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29f349c3-0f98-44e6-abd4-08a61bb24303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!nagujean"
    ]
   },
   {
