--- a/Exploration/Quest01/pytoch_7.ipynb
+++ b/Exploration/Quest01/pytoch_7.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -54,19 +54,7 @@
     "id": "5Op9IL8yZ5E-",
     "outputId": "ba21049c-d1a8-47fa-8d22-af63ce42f7df"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/content/drive/MyDrive/AIFFEL_quest_rs/Exploration/Quest01\n",
-      "data\t\tPokemon.csv\tpytoch_5_DatdAug.ipynb\t\t  Quest01.ipynb\n",
-      "datasets\tpytoch_2.ipynb\tpytoch_6_ImgClassification.ipynb  README.md\n",
-      "models\t\tpytoch_3.ipynb\tpytoch_7.ipynb\n",
-      "non_linear.csv\tpytoch_4.ipynb\tpytorch_1.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd /content/drive/MyDrive/AIFFEL_quest_rs/Exploration/Quest01/\n",
     "!ls"
@@ -74,12 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "tXFFTs7lXrgA"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan/work/workplace/AIFFEL_quest_rs/Exploration/Quest01\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
   },
   {
    "cell_type": "code",
@@ -232,13 +230,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -rf \"/home/jovyan/work/workplace/AIFFEL_quest_rs/Exploration/Quest01/C:/Users/KHI/Desktop/mldata\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "id": "GxVUwxR8PKys"
    },
    "outputs": [],
    "source": [
     "import torch\n",
+    "import os\n",
     "from torch import nn, optim\n",
     "from torch.nn import functional as F\n",
     "from torch.utils.data import DataLoader\n",
@@ -248,7 +256,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. 현재 주피터 노트북의 작업 디렉토리 (os.getcwd()): /home/jovyan/work/workplace/AIFFEL_quest_rs/Exploration/Quest01\n"
+     ]
+    }
+   ],
+   "source": [
+    "current_working_directory = os.getcwd()\n",
+    "print(f\"1. 현재 주피터 노트북의 작업 디렉토리 (os.getcwd()): {current_working_directory}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -268,25 +301,35 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 170M/170M [00:10<00:00, 15.5MB/s] \n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3925\n",
-      "1962\n",
-      "1963\n"
+      "10000\n",
+      "5000\n",
+      "5000\n"
      ]
     }
    ],
    "source": [
+    "target_dataset_dir = os.path.abspath(os.path.join(os.getcwd(), \"../../../datasets/mldata\")) \n",
+    "\n",
+    "\n",
     "transform = transforms.Compose([\n",
-    "    transforms.Resize((224, 224)),\n",
+    "    transforms.Resize((32, 32)),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
     "])\n",
     "\n",
     "\n",
-    "train_dataset = datasets.Imagenette(root=\"data\", split=\"train\", download=True, transform=transform)\n",
-    "val_dataset = datasets.Imagenette(root=\"data\", split=\"val\", download=True, transform=transform)\n",
+    "train_dataset = datasets.CIFAR10(root=target_dataset_dir, train=True, download=True, transform=transform)\n",
+    "val_dataset = datasets.CIFAR10(root=target_dataset_dir, train=False, download=True, transform=transform)\n",
     "\n",
     "val_size = len(val_dataset)\n",
     "print(val_size)\n",
@@ -300,6 +343,23 @@
     "train_dataloader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
     "val_dataloader = DataLoader(val_dataset, batch_size=32, shuffle=True)\n",
     "test_dataloader = DataLoader(test_dataset, batch_size=32, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "현재 파이썬 코드가 사용하는 데이터셋 저장 경로: /home/jovyan/work/workplace/datasets/mldata\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"현재 파이썬 코드가 사용하는 데이터셋 저장 경로: {target_dataset_dir}\")"
    ]
   },
   {
