--- a/Exploration/Quest01/pytoch_7.ipynb
+++ b/Exploration/Quest01/pytoch_7.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -184,10 +184,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 72e1668] commit\n",
-      " 3 files changed, 1497 insertions(+), 2 deletions(-)\n",
-      " create mode 100644 Exploration/Quest01/.ipynb_checkpoints/pytoch_7-checkpoint.ipynb\n",
-      " create mode 100644 Exploration/Quest01/colab_test.ipynb\n"
+      "[main c33f504] commit\n",
+      " 2 files changed, 1332 insertions(+), 24 deletions(-)\n",
+      " create mode 100644 Exploration/Quest01/.ipynb_checkpoints/pytorch_1-checkpoint.ipynb\n"
      ]
     }
    ],
