feat: Quest01 pytorch_7.ipynb 변경 사항 업데이트

--- a/Exploration/Quest01/pytoch_7.ipynb
+++ b/Exploration/Quest01/pytoch_7.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -219,7 +219,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Username for 'https://github.com': "
+      "Username for 'https://github.com': ^C\n"
      ]
     }
    ],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {
     "id": "GxVUwxR8PKys"
    },
@@ -255,24 +255,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. 현재 주피터 노트북의 작업 디렉토리 (os.getcwd()): /home/jovyan/work/workplace/AIFFEL_quest_rs/Exploration/Quest01\n"
-     ]
-    }
-   ],
-   "source": [
-    "current_working_directory = os.getcwd()\n",
-    "print(f\"1. 현재 주피터 노트북의 작업 디렉토리 (os.getcwd()): {current_working_directory}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -280,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -299,13 +281,6 @@
     "outputId": "aadcca2b-c1cf-4e09-f003-224117097e60"
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 170M/170M [00:10<00:00, 15.5MB/s] \n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -346,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -386,7 +361,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of X [N, C, H, W]: torch.Size([32, 3, 224, 224])\n",
+      "Shape of X [N, C, H, W]: torch.Size([32, 3, 32, 32])\n",
       "Shape of y: torch.Size([32]) torch.int64\n"
      ]
     }
@@ -409,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -432,11 +407,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using cuda device\n",
+      "Using cpu device\n",
       "NeuralNetwork(\n",
       "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
       "  (linear_relu_stack): Sequential(\n",
-      "    (0): Linear(in_features=150528, out_features=512, bias=True)\n",
+      "    (0): Linear(in_features=3072, out_features=512, bias=True)\n",
       "    (1): ReLU()\n",
       "    (2): Linear(in_features=512, out_features=512, bias=True)\n",
       "    (3): ReLU()\n",
@@ -463,7 +438,7 @@
     "        super().__init__()\n",
     "        self.flatten = nn.Flatten()\n",
     "        self.linear_relu_stack = nn.Sequential(\n",
-    "            nn.Linear(3*224*224, 512),\n",
+    "            nn.Linear(3*32*32, 512),\n",
     "            nn.ReLU(),\n",
     "            nn.Linear(512, 512),\n",
     "            nn.ReLU(),\n",
@@ -481,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "id": "lTozvF5iPKld"
    },
@@ -493,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "id": "KrEq0dG2sjEP"
    },
@@ -520,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "id": "uzHwV3bwsABn"
    },
@@ -548,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "id": "7dKQ_yB5PKf9"
    },
@@ -572,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -587,66 +562,125 @@
      "text": [
       "Epoch 1\n",
       "-------------------------------\n",
-      "loss: 2.273432  [   32/ 9469]\n",
-      "loss: 1.845385  [ 3232/ 9469]\n",
-      "loss: 1.892853  [ 6432/ 9469]\n",
-      "Validation loss: 1.8080, Accuracy: 40.04%\n",
+      "loss: 2.313846  [   32/50000]\n",
+      "loss: 2.299055  [ 3232/50000]\n",
+      "loss: 2.258565  [ 6432/50000]\n",
+      "loss: 2.218471  [ 9632/50000]\n",
+      "loss: 2.170770  [12832/50000]\n",
+      "loss: 2.195712  [16032/50000]\n",
+      "loss: 2.164032  [19232/50000]\n",
+      "loss: 2.085094  [22432/50000]\n",
+      "loss: 2.117492  [25632/50000]\n",
+      "loss: 2.123585  [28832/50000]\n",
+      "loss: 2.304708  [32032/50000]\n",
+      "loss: 2.136848  [35232/50000]\n",
+      "loss: 1.971008  [38432/50000]\n",
+      "loss: 2.043857  [41632/50000]\n",
+      "loss: 1.977215  [44832/50000]\n",
+      "loss: 1.932513  [48032/50000]\n",
+      "Validation loss: 1.9837, Accuracy: 30.84%\n",
       "\n",
       "Test Error: \n",
-      " Accuracy: 38.1%, Avg loss: 1.798778 \n",
+      " Accuracy: 31.9%, Avg loss: 1.979762 \n",
       "\n",
       "Epoch 2\n",
       "-------------------------------\n",
-      "loss: 1.681618  [   32/ 9469]\n",
-      "loss: 1.675129  [ 3232/ 9469]\n",
-      "loss: 1.717267  [ 6432/ 9469]\n",
-      "Validation loss: 1.7182, Accuracy: 41.16%\n",
+      "loss: 1.936919  [   32/50000]\n",
+      "loss: 2.046080  [ 3232/50000]\n",
+      "loss: 1.965659  [ 6432/50000]\n",
+      "loss: 1.832719  [ 9632/50000]\n",
+      "loss: 2.050475  [12832/50000]\n",
+      "loss: 1.910905  [16032/50000]\n",
+      "loss: 1.694771  [19232/50000]\n",
+      "loss: 1.880256  [22432/50000]\n",
+      "loss: 1.800857  [25632/50000]\n",
+      "loss: 2.082801  [28832/50000]\n",
+      "loss: 1.861462  [32032/50000]\n",
+      "loss: 2.060397  [35232/50000]\n",
+      "loss: 1.924333  [38432/50000]\n",
+      "loss: 1.935325  [41632/50000]\n",
+      "loss: 1.837845  [44832/50000]\n",
+      "loss: 1.960485  [48032/50000]\n",
+      "Validation loss: 1.8397, Accuracy: 35.32%\n",
       "\n",
       "Test Error: \n",
-      " Accuracy: 41.3%, Avg loss: 1.724608 \n",
+      " Accuracy: 36.4%, Avg loss: 1.842282 \n",
       "\n",
       "Epoch 3\n",
       "-------------------------------\n",
-      "loss: 1.554750  [   32/ 9469]\n",
-      "loss: 1.328110  [ 3232/ 9469]\n",
-      "loss: 1.568715  [ 6432/ 9469]\n",
-      "Validation loss: 1.6810, Accuracy: 43.66%\n",
+      "loss: 1.505771  [   32/50000]\n",
+      "loss: 1.780903  [ 3232/50000]\n",
+      "loss: 2.168721  [ 6432/50000]\n",
+      "loss: 1.975967  [ 9632/50000]\n",
+      "loss: 1.911829  [12832/50000]\n",
+      "loss: 1.860181  [16032/50000]\n",
+      "loss: 1.990646  [19232/50000]\n",
+      "loss: 1.801884  [22432/50000]\n",
+      "loss: 1.740084  [25632/50000]\n",
+      "loss: 1.781394  [28832/50000]\n",
+      "loss: 1.717623  [32032/50000]\n",
+      "loss: 1.905368  [35232/50000]\n",
+      "loss: 1.767750  [38432/50000]\n",
+      "loss: 1.780745  [41632/50000]\n",
+      "loss: 1.791563  [44832/50000]\n",
+      "loss: 1.830886  [48032/50000]\n",
+      "Validation loss: 1.7533, Accuracy: 38.52%\n",
       "\n",
       "Test Error: \n",
-      " Accuracy: 43.0%, Avg loss: 1.683282 \n",
+      " Accuracy: 39.9%, Avg loss: 1.762655 \n",
       "\n",
       "Epoch 4\n",
       "-------------------------------\n",
-      "loss: 1.507005  [   32/ 9469]\n",
-      "loss: 1.533525  [ 3232/ 9469]\n",
-      "loss: 1.608364  [ 6432/ 9469]\n",
-      "Validation loss: 1.6453, Accuracy: 44.68%\n",
+      "loss: 1.607507  [   32/50000]\n",
+      "loss: 1.733031  [ 3232/50000]\n",
+      "loss: 1.874306  [ 6432/50000]\n",
+      "loss: 1.916763  [ 9632/50000]\n",
+      "loss: 1.692969  [12832/50000]\n",
+      "loss: 1.655231  [16032/50000]\n",
+      "loss: 1.529237  [19232/50000]\n",
+      "loss: 1.703092  [22432/50000]\n",
+      "loss: 1.961096  [25632/50000]\n",
+      "loss: 1.618339  [28832/50000]\n",
+      "loss: 1.647135  [32032/50000]\n",
+      "loss: 1.982192  [35232/50000]\n",
+      "loss: 1.488038  [38432/50000]\n",
+      "loss: 1.676809  [41632/50000]\n",
+      "loss: 1.695076  [44832/50000]\n",
+      "loss: 1.632955  [48032/50000]\n",
+      "Validation loss: 1.6921, Accuracy: 40.24%\n",
       "\n",
       "Test Error: \n",
-      " Accuracy: 44.6%, Avg loss: 1.645028 \n",
+      " Accuracy: 41.2%, Avg loss: 1.699693 \n",
       "\n",
       "Epoch 5\n",
       "-------------------------------\n",
-      "loss: 1.231570  [   32/ 9469]\n",
-      "loss: 1.698684  [ 3232/ 9469]\n",
-      "loss: 1.065366  [ 6432/ 9469]\n",
-      "Validation loss: 1.6309, Accuracy: 45.13%\n",
+      "loss: 1.705071  [   32/50000]\n",
+      "loss: 1.834255  [ 3232/50000]\n",
+      "loss: 1.253839  [ 6432/50000]\n",
+      "loss: 1.935312  [ 9632/50000]\n",
+      "loss: 1.531282  [12832/50000]\n",
+      "loss: 1.648949  [16032/50000]\n",
+      "loss: 1.823617  [19232/50000]\n",
+      "loss: 1.649187  [22432/50000]\n",
+      "loss: 1.772280  [25632/50000]\n",
+      "loss: 1.552781  [28832/50000]\n",
+      "loss: 1.768879  [32032/50000]\n",
+      "loss: 1.681893  [35232/50000]\n",
+      "loss: 1.927683  [38432/50000]\n",
+      "loss: 1.778462  [41632/50000]\n",
+      "loss: 1.507117  [44832/50000]\n",
+      "loss: 1.688811  [48032/50000]\n",
+      "Validation loss: 1.6471, Accuracy: 42.58%\n",
       "\n",
       "Test Error: \n",
-      " Accuracy: 46.1%, Avg loss: 1.630306 \n",
+      " Accuracy: 43.2%, Avg loss: 1.653171 \n",
       "\n",
-      "Epoch 6\n",
-      "-------------------------------\n",
-      "loss: 1.228664  [   32/ 9469]\n",
-      "loss: 1.060653  [ 3232/ 9469]\n",
-      "loss: 1.335228  [ 6432/ 9469]\n",
-      "Validation loss: 1.6122, Accuracy: 45.75%\n",
-      "\n"
+      "Done!\n"
      ]
     }
    ],
    "source": [
-    "epochs = 50\n",
+    "epochs = 5\n",
     "for t in range(epochs):\n",
     "    print(f\"Epoch {t+1}\\n-------------------------------\")\n",
     "    train(train_dataloader, model, loss_fn, optimizer)\n",
@@ -682,11 +716,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "id": "lwXs10dusPze"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted: \"garbage truck\", Actual: \"French horn\"\n"
+     ]
+    }
+   ],
    "source": [
     "classes = [\n",
     "    \"tench\",\n",
@@ -707,9 +749,10 @@
     "model.eval()\n",
     "x, y = test_dataset[0][0], test_dataset[0][1]\n",
     "with torch.no_grad():\n",
-    "    x = x.to(device)\n",
+    "    x = x.unsqueeze(0).to(device)\n",
     "    pred = model(x)\n",
-    "    predicted, actual = classes[pred[0].argmax(0)], classes[y]\n",
+    "    predicted = classes[pred[0].argmax(0)]\n",
+    "    actual = classes[y]\n",
     "    print(f'Predicted: \"{predicted}\", Actual: \"{actual}\"')"
    ]
   },
